--- a/forumparent/pom.xml
+++ b/forumparent/pom.xml
@@ -3,10 +3,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.example</groupId>
     <artifactId>forumparent</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>com.example</groupId>
+        <artifactId>javawebdemo</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <modules>
         <module>forumrunner</module>
         <module>forumwebapp</module>
@@ -27,7 +31,7 @@
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.11</version>
+                <version>4.13.1</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
@@ -82,10 +86,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
-                    <configuration>
-                        <!-- to be able to use text block in java 13 -->
-<!--                        <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
