--- a/forumparent/forumwebapp/pom.xml
+++ b/forumparent/forumwebapp/pom.xml
@@ -32,6 +32,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.15.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
