--- a/forumparent/pom.xml
+++ b/forumparent/pom.xml
@@ -50,7 +50,7 @@
                 <groupId>jakarta.servlet.jsp.jstl</groupId>
                 <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
                 <version>3.0.0</version>
-                <!--                <scope>provided</scope>-->
+                <scope>compile</scope> <!--not provided by tomcat, so compile-->
             </dependency>
             <dependency>
                 <groupId>org.glassfish.web</groupId>
